fixed sass code to to fix padding alignment

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -33,6 +33,7 @@ h1 {
 }
 h2 {
   font-size: 2em;
+  font: red;
 }
 h3 {
   font-size: 1.5em;
