--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -14,6 +14,7 @@
 }
 // Post listing
 .posts {
+    @extend %padding-regular;
   .post-teaser {
     @extend %padding-regular;
     width: 100%;
